# cactus

./: .gitignore  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  Package.swift  README.md  index.html  llms.txt  mkdocs.yml  setup  setup-dco.sh  sitemap.xml
.githooks/: prepare-commit-msg
.github/workflows/: build-react.yaml  deploy-docs.yml  publish_to_hf.yml  release.yml  rust.yml  verify-pr.yml
android/: CMakeLists.txt  Cactus.android.kt  Cactus.common.kt  Cactus.ios.kt  Cactus.kt  README.md  build.bat  build.sh  cactus_jni.cpp
apple/: Cactus.swift  CmakeLists.txt  README.md  build.bat  build.sh
assets/: ToolsDemo.gif.REMOVED.git-id  VLMDemo.gif.REMOVED.git-id
blog/: LFM2-24B-MoE-A1B.md  LFM2-24B-MoE-A2B.md  README.md  hybrid_transcription.md  lfm2-24b-a2b.md  lfm2_24b_a2b.md  parakeet.md
cactus/: CMakeLists.txt  build.bat  build.sh  cactus.h
cactus-tests/: CMakeLists.txt  llm.gguf.REMOVED.git-id
cactus/engine/: engine.h  engine_bpe.cpp  engine_cache.cpp  engine_constraints.cpp  engine_image.c  engine_image.cpp  engine_index.cpp  engine_model.cpp  engine_signals.cpp  engine_sp.cpp  engine_tokenizer.cpp
cactus/ffi/: cactus_cloud.cpp  cactus_cloud.h  cactus_complete.cpp  cactus_embed.cpp  cactus_ffi.cpp  cactus_ffi.h  cactus_init.cpp  cactus_rag.cpp  cactus_stream.cpp  cactus_telemetry.h  cactus_transcribe.cpp  cactus_utils.h  ffi_utils.h
cactus/graph/: graph.h  graph_builder.cpp  graph_core.cpp  graph_execute.cpp  graph_file.cpp  graph_io.cpp  graph_ops.cpp  graph_ops_math.cpp  graph_ops_nn.cpp  graph_ops_sample.cpp  graph_ops_tensor.cpp
cactus/index/: index.cpp  index.h
cactus/kernel/: kernel.h  kernel_attention.cpp  kernel_blas.cpp  kernel_conv.cpp  kernel_gemm.cpp  kernel_matmul.cpp  kernel_nn.cpp  kernel_quants.cpp  kernel_reduce.cpp  kernel_scalar.cpp  kernel_utils.h
cactus/models/: model.h  model_gemma.cpp  model_lfm2.cpp  model_lfm2moe.cpp  model_lfm2vl.cpp  model_moonshine.cpp  model_nomic.cpp  model_parakeet.cpp  model_qwen.cpp  model_siglip2.cpp  model_silero_vad.cpp  model_smol.cpp  model_whisper.cpp  model_whisper_cloud_handoff.cpp
cactus/npu/: npu.cpp  npu.h  npu_ane.h  npu_ane.mm
cactus/telemetry/: telemetry.cpp  telemetry.h
cli/: build.bat  build.sh  build_chat.sh  cactus  chat.cpp  clean.bat
docs/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.tr.md  README.zh.md  benchmark.md  benchmarking.md  cactus_engine.md  cactus_graph.md  cactus_index.md  cactus_python.md  compatibility.md  finetuning.md  mobile_integration.md
flutter/: README.md  cactus.dart
libs/audio/: wav.h
libs/stb/: stb_image.h  stb_image_resize2.h
native-tests/: README.MD
native-tests/android/app/src/main/: AndroidManifest.xml
native-tests/android/app/src/main/java/com/cactus/nativetest/: TestRunner.kt
native-tests/flutter/lib/: cactus.dart  main.dart
native-tests/ios/CactusSwiftTest/CactusSwiftTest/: TestRunner.swift
native-tests/ios/CactusSwiftTest/CactusSwiftTest.xcodeproj/: project.pbxproj
native-tests/ios/CactusSwiftTest/CactusSwiftTest.xcodeproj/project.xcworkspace/xcuserdata/justinl.xcuserdatad/: UserInterfaceState.xcuserstate
python/: README.md  pyproject.toml  requirements.txt
python/src/: cactus.py  cactus_ffi.py  cli.py  config_utils.py  converter.py  publish_to_hf.py  server.py  tensor_io.py  tokenizer.py  weight_patterns.py
rust/: README.md
rust/cactus-sys/: build.rs
rust/cactus-sys/tests/: llm.rs  stt.rs
search/: search_index.json
tests/: CMakeLists.txt  asr.cpp  chat.cpp  dump_encoder.py  run.bat  run.sh  run_benchmark.sh  test_cloud.cpp  test_engine.cpp  test_exhaustive.cpp  test_gemma_forward.cpp  test_graph.cpp  test_groundtruth.cpp  test_index.cpp  test_kernel.cpp  test_kv_cache.cpp  test_llm.cpp  test_matmul_bench.cpp  test_performance.cpp  test_rag.cpp  test_stt.cpp  test_telemetry.cpp  test_threading.cpp  test_utils.cpp  test_utils.h  test_vlm.cpp
tests/android/: run.sh
tests/assets/rag_corpus/: rag_sample1.txt  rag_sample2.txt
tests/bench/: README.md  attn_bench.cpp  backend_cactus.cpp  backend_cactus_int4.cpp  backend_executorch.cpp  backend_ggml.cpp  backend_litert.cpp  backend_mlc.cpp  backend_mlx.cpp  backend_onnxrt.cpp  bench_common.cpp  bench_common.h  bench_driver.cpp  bench_driver.h  matmul_bench.cpp
tests/golden/: generate_exhaustive_golden.sh  generate_golden.sh  golden.json
tests/golden/gemma/: INT8.json
tests/golden/lfm2/: INT8.json
tests/golden/lfm2moe/: INT8.json
tests/golden/lfm2vl/: FP16.json  INT4.json  INT8.json
tests/golden/moonshine/: INT8.json
tests/golden/nomic/: INT8.json
tests/golden/qwen/: INT8.json
tests/golden/whisper/: INT8.json
tests/ios/: configure_xcode.rb  run.sh
tests/ios/CactusTest/CactusTest/: AppDelegate.mm
tools/: clean.sh  convert_hf.py  example.py  requirements.txt  setup-dco.bat
tools/src/: cactus_ffi.py  cli.py  config_utils.py  converter_llm.py  converter_vlm.py  tensor_io.py  tokenizer.py  weight_patterns.py
tuning/: README.md
